force-app/main/default/objects/FS_Customer_Input__c/FS_Customer_Input__c.object-meta.xml
<CustomObject>
    <label>Customer Input</label>
    <nameField>
        <label>Customer Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>