force-app/main/default/objects/FS_Customer_Input__c/fields/FS_7000_Select_Water_Button_Option__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Select_Water_Button_Option__c</fullName>
    <label>Select Water Button Option (7000 Series)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
                <default>true</default>
                <label>Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>