force-app/main/default/objects/FS_Customer_Input__c/fields/FS_7000_Series_Agitated_Brands_Selection__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Agitated_Brands_Selection__c</fullName>
    <label>7000 Series Agitated Brands Selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barqs</fullName>
            </value>
            <value>
                <fullName>Pibb</fullName>
            </value>
            <value>
                <fullName>Dr Pepper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>