force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Inputs</relationshipLabel>
    <relationshipName>Customer_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>