force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Account_Type__c</fullName>
    <formula>FS_Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>