force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>