force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Ancillary_equipment_to_remain__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_equipment_to_remain__c</fullName>
    <label>Ancillary equipment to remain?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variety Tea Towers</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>