force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_Address__c</fullName>
    <label>Bill to Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>