force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Bill_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_Zip_Code__c</fullName>
    <label>Bill to Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>