force-app/main/default/objects/FS_Customer_Input__c/fields/FS_BillToAddressSameAsShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>FS_BillToAddressSameAsShipToAddress__c</fullName>
    <inlineHelpText>Use this field after the Customer Input form has been added to an Outlet.</inlineHelpText>
    <label>Bill-To Address same as Ship-to-Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>