force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brandset</label>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Customer Inputs</relationshipLabel>
    <relationshipName>Customer_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>