force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Cartridge_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Delivery_Method__c</fullName>
    <label>Cartridge Order/Delivery Method:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>