force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Cartridge_order_method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_order_method__c</fullName>
    <label>Cartridge order method:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coke Smart</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>