force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Cartridge_payment_method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_payment_method__c</fullName>
    <label>Payment Method:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Payment Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>