force-app/main/default/objects/FS_Customer_Input__c/fields/FS_CCFS_2K_Conversion_Incentive__c.field-meta.xml
<CustomField>
    <fullName>FS_CCFS_2K_Conversion_Incentive__c</fullName>
    <label>CCFS $2K Conversion Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Yes- 5 store test commitment</fullName>
            </value>
            <value>
                <fullName>Yes- Commercialization commitment</fullName>
            </value>
            <value>
                <fullName>Yes- Region Customer Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>