force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Coca_Cola_Sales_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Coca_Cola_Sales_Representative_Name__c</fullName>
    <label>Coca-Cola Sales Representative Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>