force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Color_of_self_serve_units__c.field-meta.xml
<CustomField>
    <fullName>FS_Color_of_self_serve_units__c</fullName>
    <label>Select Color of 9000 Series units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>