force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contact_Email_for_Wired_Solution__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Email_for_Wired_Solution__c</fullName>
    <label>Contact Email for Wired Solution</label>
    <type>Email</type>
</CustomField>