force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contact_name_email_for_Ship_Confir__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_name_email_for_Ship_Confir__c</fullName>
    <label>Contact name/email for Ship Confir.</label>
    <length>128</length>
    <type>Text</type>
</CustomField>