force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contact_Name_for_Wired_Solution__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Name_for_Wired_Solution__c</fullName>
    <label>Contact Name for Wired Solution</label>
    <length>64</length>
    <type>Text</type>
</CustomField>