force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contractor_Coordination_to_be_done_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_Coordination_to_be_done_by__c</fullName>
    <label>Contractor Coordination to be done by?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>