force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contractor_email__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_email__c</fullName>
    <label>Contractor email</label>
    <type>Email</type>
</CustomField>