force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contractor_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_name__c</fullName>
    <inlineHelpText>Davaco or Customer Selected</inlineHelpText>
    <label>Contractor name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>