force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Contractor_phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_phone__c</fullName>
    <label>Contractor phone</label>
    <type>Phone</type>
</CustomField>