force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Copied_to_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Copied_to_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copied to Installation</label>
    <type>Checkbox</type>
</CustomField>