force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Copy_Contact_from_HQ__c.field-meta.xml
<CustomField>
    <fullName>FS_Copy_Contact_from_HQ__c</fullName>
    <label>Copy Contact from HQ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John Smith</fullName>
            </value>
            <value>
                <fullName>Maria Garcia</fullName>
            </value>
            <value>
                <fullName>Bill Jones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>