force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Credit_Conf_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Credit_Conf_Contact_Email__c</fullName>
    <label>Credit Conf Contact Email</label>
    <type>Email</type>
</CustomField>