force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Crew_serve_volume__c.field-meta.xml
<CustomField>
    <fullName>FS_Crew_serve_volume__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>8000 Series volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>