force-app/main/default/objects/FS_Customer_Input__c/fields/FS_CS_Sub_Trade_Channel__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Sub_Trade_Channel__c</fullName>
    <label>8000 Series - Sub-Trade Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>FSR</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>