force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Dasani_Buttons__c.field-meta.xml
<CustomField>
    <fullName>FS_Dasani_Buttons__c</fullName>
    <label>Select Dasani Buttons Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>