force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Day_AM_or_Night_PM_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Day_AM_or_Night_PM_Installation__c</fullName>
    <label>Day(AM) or Night(PM) Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>