force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Distributor_Name_City_ST__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Name_City_ST__c</fullName>
    <label>Foodservice Distributor Name/City/St</label>
    <length>128</length>
    <type>Text</type>
</CustomField>