force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Plan</label>
    <referenceTo>FS_Execution_Plan__c</referenceTo>
    <relationshipLabel>Pre FET 4.1 CIF</relationshipLabel>
    <relationshipName>Customer_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>