force-app/main/default/objects/FS_Customer_Input__c/fields/FS_General_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Name__c</fullName>
    <label>General Contractor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>