force-app/main/default/objects/FS_Customer_Input__c/fields/FS_If_above_is_no_what_location__c.field-meta.xml
<CustomField>
    <fullName>FS_If_above_is_no_what_location__c</fullName>
    <label>If above is no, what location</label>
    <length>128</length>
    <type>Text</type>
</CustomField>