force-app/main/default/objects/FS_Customer_Input__c/fields/FS_If_answer_above_is_Yes_repeat_above__c.field-meta.xml
<CustomField>
    <fullName>FS_If_answer_above_is_Yes_repeat_above__c</fullName>
    <label>If answer to above is Yes, repeat above</label>
    <length>128</length>
    <type>Text</type>
</CustomField>