force-app/main/default/objects/FS_Customer_Input__c/fields/FS_If_no_then_place_Freestyle_uni__c.field-meta.xml
<CustomField>
    <fullName>FS_If_no_then_place_Freestyle_uni__c</fullName>
    <label>If above is no, then place Freestyle uni</label>
    <length>128</length>
    <type>Text</type>
</CustomField>