force-app/main/default/objects/FS_Customer_Input__c/fields/FS_if_yes_provide_details__c.field-meta.xml
<CustomField>
    <fullName>FS_if_yes_provide_details__c</fullName>
    <label>if yes, provide details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>