force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Installation_Contact_Same_As__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Same_As__c</fullName>
    <label>Installation Contact Same As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboard Contact</fullName>
            </value>
            <value>
                <fullName>Site Assessment Contact</fullName>
            </value>
            <value>
                <fullName>General Contractor Contact</fullName>
            </value>
            <value>
                <fullName>Admin Contact</fullName>
            </value>
            <value>
                <fullName>None (New Contact)</fullName>
                <default>true</default>
                <label>None (New Contact)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>