force-app/main/default/objects/FS_Customer_Input__c/fields/FS_InstallationContact_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContact_Email__c</fullName>
    <label>Installation Contact Email</label>
    <type>Email</type>
</CustomField>