force-app/main/default/objects/FS_Customer_Input__c/fields/FS_InstallationContact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContact_Name__c</fullName>
    <label>Installation Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>