force-app/main/default/objects/FS_Customer_Input__c/fields/FS_InstallationContact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContact_Phone__c</fullName>
    <label>Installation Contact Phone</label>
    <type>Phone</type>
</CustomField>