force-app/main/default/objects/FS_Customer_Input__c/fields/FS_InstallationContactPreferredModeComm__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContactPreferredModeComm__c</fullName>
    <label>Installation Contact Preferred Mode Comm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>