force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Invoice_Customer__c.field-meta.xml
<CustomField>
    <fullName>FS_Invoice_Customer__c</fullName>
    <label>Invoice Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>