force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Is_an_approved_Water_Filter_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_an_approved_Water_Filter_Installed__c</fullName>
    <label>Is an approved Water Filter Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>