force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Is_legacy_equipment_required__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_legacy_equipment_required__c</fullName>
    <label>Is legacy equipment required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>